Fix position bug of collapse menu closer.

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -189,6 +189,7 @@ div.header-bar {
                     }
                     div.header-bar-collapse-menu-closer {
                         flex: none;
+                        margin-left: auto;
                         margin-right: 20px;
                         font-size: 24px;
                         line-height: @headerBarHeight;
